# parallel_programming_tutorial

./: Cargo.toml  README.md
prebuilt_programs/: Cargo.toml
tutorials/1_spawn_threads/: README.md
tutorials/3_par_map/: Cargo.toml  README.md
tutorials/5_par_stencil/: README.md
tutorials/6_batch/: README.md
tutorials/6_batch/src/: main.rs
tutorials/batch/: README.md
tutorials/par_map/: README.md
tutorials/par_map/src/: main.rs
tutorials/par_stencil/: README.md
tutorials/serial_map/: Cargo.toml  README.md
tutorials/serial_stencil/: README.md
tutorials/spawn_threads/: README.md
