[package]
name = "parprogtut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_tasks = { version = "0.13", features = ["multi-threaded"] }
# bevy_tasks = "0.13"
web-time = "0.2"
rand = "0.8"
rand_chacha = "0.3"
